Desenvolvimento da página cadastro-residuo

--- a/principal.html
+++ b/principal.html
@@ -16,9 +16,9 @@
             <h1>Bem-vindo(a) à EcoSaúde!</h1> 
             <nav class="principal-menu">
                 <a href="cadastro-usuario.html">Cadastro de Usuário</a> 
-                <a href="#">Cadastro de Resíduo (Em breve)</a>
-                <a href="#">Agendamento de Coleta (Em breve)</a>
-                <a href="#">Relatório de Coletas (Em breve)</a>
+                <a href="cadastro-residuo.html">Cadastro de Resíduo </a>
+                <a href="#">Agendamento de Coleta</a>
+                <a href="#">Relatório de Coletas </a>
                 <a href="index.html">Sair</a>
             </nav>
         </section>
