Desenvolvimento páginas Agendamento de coletas e Relatório de coletas

--- a/principal.html
+++ b/principal.html
@@ -17,8 +17,8 @@
             <nav class="principal-menu">
                 <a href="cadastro-usuario.html">Cadastro de Usuário</a> 
                 <a href="cadastro-residuo.html">Cadastro de Resíduo </a>
-                <a href="#">Agendamento de Coleta</a>
-                <a href="#">Relatório de Coletas </a>
+                <a href="agendamento-coleta.html">Agendamento de Coleta</a>
+                <a href="relatorio-coletas.html">Relatório de Coletas </a>
                 <a href="index.html">Sair</a>
             </nav>
         </section>
