--- a/FrontEnd/html/cadastro-usuario.html
+++ b/FrontEnd/html/cadastro-usuario.html
@@ -14,18 +14,18 @@
                 <img src="assets/images/logo-ecosaude.png" alt="Logo EcoSaúde"> 
             </div>
             <h1>Cadastro de Usuário</h1>
-            <form class="cadastro-form">
+            <form class="cadastro-form" action="processa.php" method="POST">
                 <div class="input-group">
                     <label for="nome">Nome Completo</label>
-                    <input type="text" id="nome" placeholder="Digite o nome completo" required>
+                    <input type="text" id="nome" placeholder="Digite o nome completo" required name="nome">
                 </div>
                 <div class="input-group">
                     <label for="email">E-mail</label>
-                    <input type="email" id="email" placeholder="Digite o e-mail" required>
+                    <input type="email" id="email" placeholder="Digite o e-mail" required name="email">
                 </div>
                 <div class="input-group">
                     <label for="nova-senha">Nova Senha</label>
-                    <input type="password" id="nova-senha" placeholder="Crie uma senha" required>
+                    <input type="password" id="nova-senha" placeholder="Crie uma senha" required name="senha">
                 </div>
                 <div class="input-group">
                     <label for="confirmar-senha">Confirmar Senha</label>
