--- a/FrontEnd/html/agendamento-coleta.html
+++ b/FrontEnd/html/agendamento-coleta.html
@@ -14,7 +14,7 @@
                 <img src="assets/images/logo-ecosaude.png" alt="Logo EcoSaúde"> 
             </div>
             <h1>Agendamento de Coleta</h1>
-            <form class="agendamento-form">
+            <form class="agendamento-form" action="setando.php" method="POST">
                 <div class="input-group">
                     <label for="data-coleta">Data da Coleta</label>
                     <input type="date" id="data-coleta" required>
