--- a/FrontEnd/html/index.html
+++ b/FrontEnd/html/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main> <section class="login-container"> <div class="logo-container">
-                <img src="assets/images/logo-ecosaude.png" alt="Logo EcoSaúde"> 
+                <img src="../assets/images/logo-ecosaude.png" alt="Logo EcoSaúde"> 
             </div>
             
             <form class="login-form">
@@ -38,6 +38,6 @@
         </section>
     </main>
 
-    <script src="js/login.js"></script> 
+    <script src="../js/login.js"></script> 
 </body>
 </html>
