--- a/FrontEnd/html/agendamento-coleta.html
+++ b/FrontEnd/html/agendamento-coleta.html
@@ -11,7 +11,7 @@
     <main>
         <section class="agendamento-container">
             <div class="logo-container">
-                <img src="assets/images/logo-ecosaude.png" alt="Logo EcoSaúde"> 
+                <img src="../assets/images/logo-ecosaude.png" alt="Logo EcoSaúde"> 
             </div>
             <h1>Agendamento de Coleta</h1>
             <form class="agendamento-form" action="setando.php" method="POST">
@@ -44,6 +44,6 @@
         </section>
     </main>
 
-    <script src="js/agendamento-coleta.js"></script> 
+    <script src="../js/agendamento-coleta.js"></script> 
 </body>
 </html>
