--- a/FrontEnd/html/cadastro-residuo.html
+++ b/FrontEnd/html/cadastro-residuo.html
@@ -13,7 +13,7 @@
     <main>
         <section class="cadastro-residuo-container">
             <div class="logo-container">
-                <img src="assets/images/logo-ecosaude.png" alt="Logo EcoSaúde"> 
+                <img src="../assets/images/logo-ecosaude.png" alt="Logo EcoSaúde"> 
             </div>
             <h1>Cadastro de Resíduo</h1>
             <form class="cadastro-residuo-form" action="conexao.php" method="POST">
@@ -53,7 +53,7 @@
         </section>
     </main>
 
-    <script src="js/cadastro-residuo.js"></script> 
+    <script src="../js/cadastro-residuo.js"></script> 
 </body>
 </html>
 
