--- a/FrontEnd/html/cadastro-usuario.html
+++ b/FrontEnd/html/cadastro-usuario.html
@@ -11,7 +11,7 @@
     <main>
         <section class="cadastro-container">
             <div class="logo-container">
-                <img src="assets/images/logo-ecosaude.png" alt="Logo EcoSaúde"> 
+                <img src="../assets/images/logo-ecosaude.png" alt="Logo EcoSaúde"> 
             </div>
             <h1>Cadastro de Usuário</h1>
             <form class="cadastro-form" action="processa.php" method="POST">
@@ -37,6 +37,6 @@
         </section>
     </main>
 
-    <script src="js/cadastro-usuario.js"></script> 
+    <script src="../js/cadastro-usuario.js"></script> 
 </body>
 </html>
