--- a/FrontEnd/html/principal.html
+++ b/FrontEnd/html/principal.html
@@ -11,7 +11,7 @@
     <main>
         <section class="principal-container"> 
             <div class="logo-container">
-                <img src="assets/images/logo-ecosaude.png" alt="Logo EcoSaúde"> 
+                <img src="../assets/images/logo-ecosaude.png" alt="Logo EcoSaúde"> 
             </div>
             <h1>Bem-vindo(a) à EcoSaúde!</h1> 
             <nav class="principal-menu">
