--- a/FrontEnd/html/relatorio-coletas.html
+++ b/FrontEnd/html/relatorio-coletas.html
@@ -11,7 +11,7 @@
     <main>
         <section class="relatorio-container">
             <div class="logo-container">
-                <img src="assets/images/logo-ecosaude.png" alt="Logo EcoSaúde"> 
+                <img src="../assets/images/logo-ecosaude.png" alt="Logo EcoSaúde"> 
             </div>
             <h1>Relatório de Coletas</h1>
             <form class="relatorio-form">
@@ -43,6 +43,6 @@
         </section>
     </main>
 
-    <script src="js/relatorio-coletas.js"></script> 
+    <script src="../js/relatorio-coletas.js"></script> 
 </body>
 </html>
