--- a/FrontEnd/html/relatorio-coletas.html
+++ b/FrontEnd/html/relatorio-coletas.html
@@ -39,6 +39,8 @@
                     <button type="button" id="btn-gerar-excel" class="relatorio-button excel">Gerar Excel</button>
                 </div>
             </form>
+            <div id="area-resultados-relatorio">
+            </div>
             <a href="principal.html" class="back-link">Voltar para o Menu Principal</a>
         </section>
     </main>
